Submissions.csv ready

--- a/vishnu.ipynb
+++ b/vishnu.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "4              No          13158       No  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "max        85.000000     2019.000000  103520.000000"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "<AxesSubplot:xlabel='PAST_PURCHASE'>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
        "max        85.000000     2019.000000   36618.000000"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
       " 6   PAST_PURCHASE    147016 non-null  int64 \n",
       " 7   PURCHASE         147016 non-null  object\n",
       "dtypes: int64(3), object(5)\n",
-      "memory usage: 15.1+ MB\n"
+      "memory usage: 10.1+ MB\n"
      ]
     }
    ],
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2513,7 +2513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2522,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2531,7 +2531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2540,7 +2540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2553,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2562,7 +2562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2666,7 +2666,7 @@
        "4            2014              No          15724  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2677,7 +2677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2686,7 +2686,7 @@
        "Index(['STATE', 'OCCUPATION', 'INCOME_GROUP', 'LOYALTY_PROGRAM'], dtype='object')"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2697,7 +2697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2709,219 +2709,53 @@
       "Encoding feature: INCOME_GROUP\n",
       "Encoding feature: LOYALTY_PROGRAM\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-54-2e1b340dfbe0>:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X_train[feature] = le.fit_transform(X_train[feature])\n",
+      "<ipython-input-54-2e1b340dfbe0>:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X_test[feature] = le.transform(X_test[feature])\n"
+     ]
     }
    ],
    "source": [
-    "categorical=testdf.describe(include='O').columns\n",
+    "categorical=X_train.describe(include='O').columns\n",
     "for feature in categorical:\n",
     "        print('Encoding feature:',feature)\n",
     "        le = preprocessing.LabelEncoder()\n",
-    "        testdf[feature] = le.fit_transform(testdf[feature])"
+    "        # The dataset has already been split into training and testing datasets and they are both encoded. Encoding is done\n",
+    "        # separately so that there is no bias in the testing dataset that has passed on over from the training dataset.\n",
+    "        X_train[feature] = le.fit_transform(X_train[feature])\n",
+    "        X_test[feature] = le.transform(X_test[feature])\n",
+    "        testdf[feature] = le.transform(testdf[feature])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>STATE</th>\n",
-       "      <th>AGE</th>\n",
-       "      <th>OCCUPATION</th>\n",
-       "      <th>INCOME_GROUP</th>\n",
-       "      <th>CUSTOMER_SINCE</th>\n",
-       "      <th>LOYALTY_PROGRAM</th>\n",
-       "      <th>PAST_PURCHASE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>17</td>\n",
-       "      <td>50</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12746</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>17</td>\n",
-       "      <td>58</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12277</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16401</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20</td>\n",
-       "      <td>27</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9665</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>30</td>\n",
-       "      <td>67</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15724</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49995</th>\n",
-       "      <td>14</td>\n",
-       "      <td>49</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49996</th>\n",
-       "      <td>15</td>\n",
-       "      <td>47</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49997</th>\n",
-       "      <td>17</td>\n",
-       "      <td>63</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49998</th>\n",
-       "      <td>25</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49999</th>\n",
-       "      <td>27</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6977</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>50000 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       STATE  AGE  OCCUPATION  INCOME_GROUP  CUSTOMER_SINCE  LOYALTY_PROGRAM  \\\n",
-       "0         17   50           2             2            2018                0   \n",
-       "1         17   58           2             0            2011                2   \n",
-       "2          0   30           1             1            2017                2   \n",
-       "3         20   27           1             1            2018                2   \n",
-       "4         30   67           3             2            2014                0   \n",
-       "...      ...  ...         ...           ...             ...              ...   \n",
-       "49995     14   49           2             2            2016                0   \n",
-       "49996     15   47           2             0            2016                1   \n",
-       "49997     17   63           3             0            2011                0   \n",
-       "49998     25   32           1             1            2017                2   \n",
-       "49999     27   32           1             1            2018                2   \n",
-       "\n",
-       "       PAST_PURCHASE  \n",
-       "0              12746  \n",
-       "1              12277  \n",
-       "2              16401  \n",
-       "3               9665  \n",
-       "4              15724  \n",
-       "...              ...  \n",
-       "49995          15751  \n",
-       "49996           7114  \n",
-       "49997          16022  \n",
-       "49998           6239  \n",
-       "49999           6977  \n",
-       "\n",
-       "[50000 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "testdf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "scaler = StandardScaler()\n",
-    "test_df_scaled = pd.DataFrame(scaler.fit_transform(testdf), columns = X.columns)"
+    "X_train = pd.DataFrame(scaler.fit_transform(X_train), columns = X.columns)\n",
+    "X_test = pd.DataFrame(scaler.transform(X_test), columns = X.columns)\n",
+    "test_df_scaled = pd.DataFrame(scaler.transform(testdf), columns = X.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2936,7 +2770,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17:48:52] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.4.0/src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[18:55:27] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.4.0/src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
       "Accuracy: 85.76%\n",
       "F1 Score:  0.6359949009155174\n"
      ]
@@ -2955,7 +2789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2966,7 +2800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2975,7 +2809,7 @@
        "50000"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2986,7 +2820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2995,7 +2829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -3101,7 +2935,7 @@
        "[50000 rows x 2 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3112,7 +2946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3121,7 +2955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -3227,7 +3061,7 @@
        "[50000 rows x 2 columns]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3238,7 +3072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3246,11 +3080,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "With this, the submission dataset has been populated."
+   ]
   }
  ],
  "metadata": {
